# chessbot

./: Cargo.toml
crates/bot/: Cargo.toml
crates/bot/src/: good_trade.rs  lib.rs  random.rs
src/: app.rs  main.rs
